<resources>
    <string name="app_name">Cryption</string>
    <string name="Url_of_app">https://play.google.com/store/apps/details?id=com.rotibank.mumbai.donate</string>
    <string name="update_message">Please update the application before using.</string>
    <string name="about_menu">About</string>
    <string name="credit_menu">Credits</string>
    <string name="type_of_encryption">Type of Encryption</string>
    <string name="enter_message">Enter Message</string>
    <string name="encrypt">Encrypt</string>
    <string name="enter_key">Enter Key</string>
    <string name="submit">Submit</string>
    <string name="Open">Open</string>
    <string name="Close">close</string>
    <string-array name="encryptions">
        <!--<item>Morse Code</item>-->
        <item>Caesar Cipher</item>
        <item>Substitution Cipher</item>
    </string-array>


</resources>
