<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/type_of_encryption"
        app:showAsAction="ifRoom"
        android:orderInCategory="1">
        <menu>
            <item
                android:title="Rot-13"/>
            <item
                android:title="Substituion"/>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:title="@string/about_menu"
            android:orderInCategory="2"/>
        <item
            android:id="@+id/credit"
            android:title="@string/credit_menu"
            android:orderInCategory="3"/>
    </group>
</menu>